fixing relative path

--- a/demo/index.html
+++ b/demo/index.html
@@ -61,7 +61,7 @@ gtag('config', 'UA-103062405-1');
   <body>
     <div id='root'>
     </div>
-    <script src="/static/bundle.js"></script>
+    <script src="static/bundle.js"></script>
 
     <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-50426bb44b15fab2"></script> 
   </body>
