--- a/demo/index.html
+++ b/demo/index.html
@@ -11,8 +11,8 @@
     <meta name="author" content="Afshin Mehrabani" />
     <meta property="og:locale" content="en_US" />
     <meta name="keywords" content="neural network, rust, WebAssembly, juggernaut, machine learning, visualization" />
-    <meta name="description" content="Juggernaut is an experimental Neural Network written in Rust. This demo page utilizes the power of Juggernaut and WebAssembly to train a Neural Network in your web browser and visualze all the steps using SVG and Canvas." />
-    <meta property="og:description" content="Juggernaut is an experimental Neural Network written in Rust. This demo page utilizes the power of Juggernaut and WebAssembly to train a Neural Network in your web browser and visualze all the steps using SVG and Canvas." />
+    <meta name="description" content="Juggernaut is an experimental Neural Network written in Rust. This demo page utilizes the power of Juggernaut and WebAssembly to train a Neural Network in your web browser and visualizes all the steps using SVG and Canvas." />
+    <meta property="og:description" content="Juggernaut is an experimental Neural Network written in Rust. This demo page utilizes the power of Juggernaut and WebAssembly to train a Neural Network in your web browser and visualizes all the steps using SVG and Canvas." />
     <link rel="canonical" href="http://juggernaut.rs/demo/" />
     <meta property="og:url" content="http://juggernaut.rs/demo/" />
     <meta property="og:site_name" content="Juggernaut" />
